# app/controller/base.go
@@ -3,6 +3,8 @@ package controller
 import (
 	"app/infra"
 	"app/infra/messages"
+	"app/tools"
+	"errors"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -13,22 +15,41 @@ type BaseCtl struct {
 }
 
 type Demo struct {
-	AAd string `json:"aAd"`
+	AAd string `json:"aAd" bindings:required`
 }
 
-func FnWarp(fn infra.ControllerMethod) gin.HandlerFunc {
-	return func(ctx *gin.Context) {
-		rsp, err := fn(ctx)
-		if err != nil {
-			ctx.JSON(http.StatusNotFound, err)
-			return
-		}
-		ctx.JSON(http.StatusOK, rsp)
+type Resp struct {
+	Avatar   string
+	Grade    int
+	ID       int
+	NickName string
+	Phone    string
+	PlayRole int
+	SchoID   string
+	School   string
+	Sex      int
+	UID      int
+	UName    []string
+	Hit      int
+	WriteHit int
+}
+
+func (d *BaseCtl) Test(ctx *gin.Context) {
+	ctx.JSON(http.StatusOK, Resp{})
+}
+
+func (d *BaseCtl) Hellp(ctx *gin.Context) {
+	var req Demo
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		tools.RenderJsonFail(ctx, errors.New("test"))
+		return
 	}
+	tools.RenderJsonSucc(ctx, Resp{})
 }
 
 // Routes implements infra.Controller.
 func (b *BaseCtl) Routes(engine *gin.Engine) {
+	engine.POST("/test", b.Hellp)
 }
 
 var _ infra.Controller = (*BaseCtl)(nil)
