# openapi.generated.yaml
@@ -9,6 +9,69 @@ info:
 servers:
     - url: http://localhost:8000
 paths:
-    /demo:
+    /test:
         post:
-            operationId: test
+            operationId: hellp
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/controller.Demo'
+            responses:
+                "200":
+                    description: ""
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/controller.Resp'
+                "400":
+                    description: ""
+                    content:
+                        text/plain:
+                            schema:
+                                type: string
+components:
+    schemas:
+        controller.Demo:
+            type: object
+            properties:
+                aAd:
+                    type: string
+        controller.Resp:
+            type: object
+            properties:
+                Avatar:
+                    type: string
+                Grade:
+                    type: integer
+                    format: int32
+                Hit:
+                    type: integer
+                    format: int32
+                ID:
+                    type: integer
+                    format: int32
+                NickName:
+                    type: string
+                Phone:
+                    type: string
+                PlayRole:
+                    type: integer
+                    format: int32
+                SchoID:
+                    type: string
+                School:
+                    type: string
+                Sex:
+                    type: integer
+                    format: int32
+                UID:
+                    type: integer
+                    format: int32
+                UName:
+                    type: array
+                    items:
+                        type: string
+                WriteHit:
+                    type: integer
+                    format: int32
